--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,5 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: linear-gradient(right, rgb(171, 143, 31) 0%, rgb(116, 204, 156) 100%);
+    background: linear-gradient(to left, rgb(171, 143, 31) 0%, rgb(116, 204, 156) 100%);
 }
